# Handgesture-Recognition

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  gesture.py  main.py  main_old.py  pyproject.toml  requirements.txt  requirements2.txt  theft.py
.github/workflows/: docker-publish.yml  docker-publist.yml
config/: gesture_config.json  requirements.txt
data/presentations/: HandGesture.pptx
docs/: README.md
src/: gesture.py  test_gesture.py
