[project]
name = "Handgesture-Recognition"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "xevansz", email = "minithbmatthew@gmail.com"},
]
dependencies = [
    "streamlit>=1.28.0",
    "opencv-python>=4.8.0",
    "cvzone>=1.6.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.3",
    "python-pptx>=0.6.21",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
